add_executable(LinuxHunter main.cpp memory.cpp QuestState.cpp ProcessMemory.cpp PlayerDataLookup.cpp WeaponId.cpp mhw_lookup.cpp patterns.cpp utils.cpp ui.cpp wdisplay.cpp fdisplay.cpp)
target_link_libraries(LinuxHunter ncursesw fmt::fmt)
set_property(TARGET LinuxHunter PROPERTY CXX_STANDARD 20)
set_property(TARGET LinuxHunter PROPERTY CXX_STANDARD_REQUIRED true)
target_compile_options(LinuxHunter PUBLIC -Werror -Wall -Wextra -Wpedantic)
